log
Wed 24 Apr 2024 07:16:02 PM UTC: 
 tests:  0|6
total_score: 0/70
8f10125
Wed 24 Apr 2024 07:36:03 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
53c9d40
Wed 24 Apr 2024 07:39:52 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   59 |     map->current = NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
aa85a3c
Wed 24 Apr 2024 07:39:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b8f10d1
